--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -13,7 +13,7 @@ body::before {
     content: '';
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
-    background: url('../src/main/resources/static/images/glass-texture.jpg') center/cover no-repeat;
+    background: url('../images/big-picture.jpg') center/cover no-repeat;
     opacity: 0.5;
     z-index: -2;
     animation: move 100s linear infinite;
@@ -103,9 +103,11 @@ section {
 }
 
 h1 {
-    font-size: 64px;
+    font-size: 36px;
     text-align: center;
     margin-bottom: 30px;
+    font-variant: small-caps;
+    font-weight: bold;
 }
 
 .subtitle {
