--- a/src/main/resources/templates/project-edit.html
+++ b/src/main/resources/templates/project-edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Edycja projektu - Dziennik</title>
@@ -10,10 +10,11 @@
     <div class="logo"><a th:href="${isAuthenticated} ? '/projektList' : '/index'">Dziennik</a></div>
     <nav>
         <ul>
-            <li><a th:href="${isAdmin} ? '/studentList' : '/studentProfile'">Student</a></li>
-            <li><a th:href="@{/zadanieList}">Zadanie</a></li>
-            <li><a th:href="@{/projektList}">Projekt</a></li>
-            <li><a href="/logout" class="btn-light">Wyloguj</a></li>
+            <li sec:authorize="hasRole('ADMIN')"><a href="/studentList">Studenci</a></li>
+            <li sec:authorize="hasRole('USER')"><a href="/studentProfile">Moje dane</a></li>
+            <li sec:authorize="isAuthenticated()"><a th:href="@{/zadanieList}">Zadania</a></li>
+            <li sec:authorize="isAuthenticated()"><a th:href="@{/projektList}">Projekty</a></li>
+            <li sec:authorize="isAuthenticated()"><a href="/logout" class="btn-light">Wyloguj</a></li>
         </ul>
     </nav>
 </header>
@@ -46,7 +47,7 @@
 
             <div style="margin-bottom: 30px;">
                 <label>Utworzony:</label>
-                <input type="text" th:value="${projekt.dataCzasUtworzenia != null ? #temporals.format(projekt.dataCzasUtworzenia, 'yyyy-MM-dd HH:mm') : ''}" readonly style="background:#f0f0f0;">
+                <input type="text" th:value="${projekt.dataCzasUtworzenia != null ? #temporals.format(projekt.dataCzasUtworzenia, 'dd-MM-yyyy HH:mm') : ''}" readonly style="background:#f0f0f0;">
                 <p style="font-size: 12px; color: #666; margin-top: 6px;">
                     Data i czas utworzenia rekordu w systemie (ustawiane automatycznie).
                 </p>
