Drobne poprawki testy

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -38,7 +38,7 @@
             </select>
 
             <label>e-mail (Twój login):</label>
-            <input type="email" th:field="*{email}" placeholder="student@pbs.edu.pl" required>
+            <input type="email" th:field="*{email}" placeholder="student@pbs.edu.pl" maxlength="254" required>
 
             <label>Hasło:</label>
             <input type="password" th:field="*{password}" placeholder="******" required id="password">
